--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                     <span>Agrupador de links</span>
                     <p>Esse projeto, foi desenvolvido para realizar agrupamento de links.</p>
                     <div class="cta-project">
-                        <a href="/" target="_blank">
+                        <a href="https://joyamarall.github.io/links/" target="_blank">
                             Código
                             <i class="fa fa-github" aria-hidden="true"></i>
                         </a>
