inluco botão para o topo

--- a/index.html
+++ b/index.html
@@ -195,6 +195,16 @@
 
 
     </section>
+
+    <footer>
+        <div data-scroll="suave" data-anima="scroll">
+            <a href="#person"></a>
+            <div class="topo">
+                <img src="./img/circle-up.png" alt="voltar ao topo">
+            </div>
+
+        </div>
+    </footer>
     <!--fim de contato-->
 </body>
 
