Passando o projeto para React

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
     </section>
 
     <button id="back-to-top">
-      <img src="./img/circle-up.png" alt="voltar ao topo" />
+      <img src="./img/circle-up.png" alt="voltar ao topo e atualizar" />
     </button>
 
     <script src="./script.js"></script>
